--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
-        "twbs/bootstrap": "5.0.2"
+        "twbs/bootstrap": "5.0.2",
+        "twbs/bootstrap-icons": "^1.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
