--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.9.2",
         "axios": "^1.3.4",
-        "bootstrap": "^5.2.3",
-        "cross-env": "^7.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.21",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.2",
         "sass": "^1.60.0",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^17.2.2"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
         "animate.css": "^4.1.1",
+        "bootstrap": "^5.2.3",
         "bootswatch": "^5.2.3",
+        "cross-env": "^7.0",
         "jquery": "^3.6.4",
         "moment": "^2.29.4",
         "pinia": "^2.0.33",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^3.1.2",
         "vue": "^3.2.36",
         "vue-axios": "^3.4.1",
-        "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13",
         "vue-template-compiler": "^2.6.10",
         "vue3-easy-data-table": "^1.5.42"
