--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "pinia": "^2.0.33",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
+        "sweetalert2": "^11.7.12",
         "vue": "^3.2.36",
         "vue-axios": "^3.4.1",
         "vue-router": "^4.0.13",
